--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -159,19 +159,26 @@
                 <Grid Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" SharedSizeGroup="RightLabels" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center">Default UTC offset:</TextBlock>
-                    <ComboBox Grid.Column="1" Grid.Row="0" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding UtcOffsets}" SelectedItem="{Binding UtcOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <ComboBox Grid.Column="1" Grid.Row="0" MinWidth="150" HorizontalAlignment="Stretch" Margin="10,5,0,5" ItemsSource="{Binding UtcOffsets}" SelectedItem="{Binding UtcOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Default simulator:</TextBlock>
                     <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,0,5">
                         <ComboBox x:Name="SimCombo"  VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Simulators}" SelectedItem="{Binding Simulator, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="All sims" ui:ControlHelper.PlaceholderForeground="#666" />
                         <Button Style="{StaticResource DeleteButtonStyle}" MinWidth="34" VerticalAlignment="Stretch" HorizontalAlignment="Right" Margin="0,2, 30,2" Padding="0" Visibility="{Binding SelectedItem, ElementName=SimCombo, Converter={StaticResource NullItemToVisibilityConverter} }" Command="{Binding ClearSimulatorCommand}" />
                     </Grid>
+                    <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center">Auto launch agent?:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="2" Margin="10,0,0,5" HorizontalAlignment="Stretch" VerticalAlignment="Center" IsChecked="{Binding AutoLaunchAgent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <TextBlock TextWrapping="Wrap">
+                            Auto launch flight tracking agent when starting a flight if needed
+                        </TextBlock>
+                    </CheckBox>
                 </Grid>
             </GroupBox>
         </Grid>
